--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ https://www.npmjs.com/package/aes-js
     <script src="js/aes.crypt.decrypt.js" defer></script>
     <script src="js/sha256.js" defer></script>
     <script src="js/aws.sign.js" defer></script>
+    <script src="js/sha3.256.min.js" defer></script>
+    <script src="js/aws.kms.js" defer></script>
 </head>
 
 <body>
@@ -208,8 +210,8 @@ https://www.npmjs.com/package/aes-js
                 <td>Input m</td>
                 <td>
                     <textarea id="input_aws_sign_m" oninput="sign_to_hex_m(event)" onchange="sign_to_hex_m(event)"
-                    onfocus="sign_to_hex_m(event)" onblur="sign_to_hex_m(event)" onfocusout="sign_to_hex_m(event)"
-                    rows="10">
+                        onfocus="sign_to_hex_m(event)" onblur="sign_to_hex_m(event)" onfocusout="sign_to_hex_m(event)"
+                        rows="10">
                 </textarea>
                 </td>
             </tr>
@@ -265,18 +267,73 @@ https://www.npmjs.com/package/aes-js
                     </textarea>
                 </td>
             </tr>
-        <tr>
-            <td>Signature = hexEncode(HMAC(k, m))</td>
-            <td><textarea disabled id="hmac_sign" rows="10"></textarea></td>
-        </tr>
+            <tr>
+                <td>Signature = hexEncode(HMAC(k, m))</td>
+                <td><textarea disabled id="hmac_sign" rows="10"></textarea></td>
+            </tr>
         </table>
 
     </section>
     <section>
         <a id="aws_key_management">
             <h1>AWS Key Management</h1>
-
+            <div><img src="asset/img/cmk.jpg" alt=""></div>
         </a>
+        <div>
+            <table>
+                <h3>AES Encryption</h3>
+                <tr>
+                    <td>Plaintext</td>
+                    <td><textarea name="" id="aws_kms_to_encrypt" cols="30" rows="3"></textarea></td>
+                </tr>
+                <tr>
+                    <td>Encrypt Key</td>
+                    <td><textarea name="" id="aws_kms_encrypt_key" cols="30" rows="3"></textarea></td>
+                </tr>
+                <tr>
+                    <td>Operation</td>
+                    <td><button onclick="encrypt_AWS_KMS_AES()">Encrypt</button></td>
+                </tr>
+                <tr>
+                    <td>Encryption</td>
+                    <td><textarea name="" class="textarea" disabled id="aws_kms_aes_encryption" cols="30"
+                            rows="5"></textarea></td>
+                </tr>
+
+                <tr>
+                    <td>Ciphertext</td>
+                    <td><textarea name="" id="aws_kms_to_decrypt" cols="30" rows="3"></textarea></td>
+                </tr>
+                <tr>
+                    <td>Decrypt Key</td>
+                    <td><textarea name="" id="aws_kms_decrypt_key" cols="30" rows="3"></textarea></td>
+                </tr>
+                <tr>
+                    <td>Operation</td>
+                    <td><button onclick="decrypt_AWS_KMS_AES()">Decrypt</button></td>
+                </tr>
+                <tr>
+                    <td>Decryption</td>
+                    <td><textarea name="" class="textarea" disabled id="aws_kms_aes_decryption" cols="30"
+                            rows="5"></textarea></td>
+                </tr>
+            </table>
+
+            <table>
+                <h3>SHA3-256</h3>
+                <tr>
+                    <td>Plaintext</td>
+                    <td><textarea name="" id="aws_kms_plaintext" oninput="toSHA3_256(event)"
+                            onchange="toSHA3_256(event)" onblur="toSHA3_256(event)" onfocus="toSHA3_256(event)"
+                            cols="30" rows="10"></textarea></td>
+                </tr>
+                <tr>
+                    <td>SHA3-256</td>
+                    <td><textarea name="" class="textarea" disabled id="aws_kms_sha3_256_result" cols="30"
+                            rows="10"></textarea></td>
+                </tr>
+            </table>
+        </div>
     </section>
     <!-- 
 
